kubernetes/apps/home/home-assistant/ingress/code-server-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-code-server-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://home-code.default.internal.javiersant.com"
    gethomepage.dev/description: Code Server for Home Assistant
    gethomepage.dev/group: Home
    gethomepage.dev/icon: code.png
    gethomepage.dev/name: Code Server (Home Assistant)
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home-code.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: home-assistant
          port: 8080
  tls:
    secretName: wildcard-javiersant-com-tls
